Fix contact us page broken on mobile

--- a/styles.css
+++ b/styles.css
@@ -3429,7 +3429,7 @@ h4.about-projects-year {
   }
 
   #page-contact-us-section .page-contact-us-container {
-    display: block;
+    display: flex;
     position: relative;
     z-index: 1;
     min-height: 878px;
@@ -3437,9 +3437,9 @@ h4.about-projects-year {
     max-width: 100%;
     margin: 0;
     padding: 0;
-    gap: 0;
-    flex-direction: unset;
+    gap: 40px;
     align-items: unset;
+    flex-direction: column-reverse;
   }
 
   #page-contact-us-section .page-contact-us-left,
@@ -3465,12 +3465,9 @@ h4.about-projects-year {
   }
 
   #page-contact-us-section .page-contact-us-left {
-    position: absolute;
-    left: 50%;
-    top: 668px;
-    transform: translateX(-50%);
+    position: relative;
     width: 100%;
-    max-width: calc(100% - 20px);
+    padding: 0 16px;
     z-index: 1;
   }
 
